--- a/.env
+++ b/.env
@@ -24,7 +24,7 @@ APP_SECRET=e36430ac81882a978b1276606cef1ad4
 # Format described at http://docs.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # Configure your db driver and server_version in config/packages/doctrine.yaml
-DATABASE_URL=mysql://root:bm9oPGKfOHL09146@35.204.15.27/gestion_incidenciasd
+DATABASE_URL=mysql://root:bm9oPGKfOHL09146@35.204.15.27/gestion_incidencias
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/swiftmailer-bundle ###
